<resources>
    <string name="app_name">PME</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="action_profile">Profile</string>
    <string name="action_changepassword">Change Password</string>
    <string name="action_search">Search</string>
    <string name="action_sendpass_to_email">Send Password to Email </string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="Login_activity_label">Welcome to PME</string>
    <string name="Alarm_Settings">Alarm Settings</string>

    <string name="nav_item_take_exam">Take Exam</string>
    <string name="nav_item_performance_history">Performance History</string>
    <string name="nav_item_review">Review</string>
    <string name="nav_item_schedules">My Schedules</string>
    <string name="nav_item_videos">Videos</string>
    <string name="nav_item_about">About</string>
    <string name="buyPro">Buy Pro Version</string>

    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_take_exam</item>
        <item>@string/nav_item_performance_history</item>
        <item>@string/nav_item_review</item>
        <item>@string/nav_item_schedules</item>
        <item>@string/nav_item_videos</item>
        <item>@string/nav_item_about</item>
        <item>@string/buyPro</item>
    </string-array>
    <string-array name="nav_drawer_icons">
        <item>@mipmap/start_exam</item>
        <item>@mipmap/performance_history</item>
        <item>@mipmap/review</item>
        <item>@mipmap/schedule</item>
        <item>@mipmap/videos</item>
        <item>@mipmap/about</item>
    </string-array>

    <string name="title_take_exam">Take Exam</string>
    <string name="title_performance_history">Performance History</string>
    <string name="title_review">Review</string>
    <string name="title_schedules">My Schedules</string>
    <string name="title_videos">Videos</string>
    <string name="title_about">About</string>
    <string name="title_pro">Buy Pro</string>
<!--Added Newly-->
    <string name="btn_facebook">Login Facebook</string>
    <string name="btn_revoke_access">Revoke Access</string>
    <string name="btn_changepassword">Change Password</string>
    <string name="app_id">1626586530911257</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_section1">Dashboard</string>

    <string name="createAccount">Create Account</string>
    <string name="updateAccount">Update Account</string>
    <string name="emailHint">Email</string>
    <string name="usernameHint">Username</string>
    <string name="oldpasswordHint">Old Password</string>
    <string name="newPasswordHint">New Password</string>
    <string name="newconfirmpasswordHint">Confirm Password</string>
    <string name="passwordHint">Password</string>
    <string name="confirmPasswordHint">Confirm Password</string>

    <string name="login_progress_signing_in">Signing in&#8230;</string>
    <string name="login_progress_password_email">Sending email&#8230;</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_duplicate_email">This email address is already in use</string>
    <string name="error_duplicate_username">This username is already in use</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_invalid_confirm_password">Passwords do not match</string>
    <string name="error_field_required">This field is required</string>

    <!--Prompt Texts-->
    <string name="prompt_text_knowledgearea">Choose Knowledge Area</string>
    <string name="prompt_text_processgroup">Choose Process Group</string>
    <string name="prompt_text_processname">Choose Process Name</string>
    <string name="prompt_text_selectlevel">Select your Difficulty Level</string>

    <!--remaider texts-->
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="delete_repeating">Delete repeating</string>
    <string name="delete_all">Delete all</string>
    <!-- youtube-->
    <string name="error_player">There was an error initializing the YouTubePlayer.</string>
</resources>
