<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".ChangepasswordActivity">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />
    </android.support.design.widget.AppBarLayout>
    <RelativeLayout
        android:id="@+id/llProfile"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:orientation="horizontal"
        android:weightSum="3"
        android:padding="15dp"
        >

        <android.support.design.widget.TextInputLayout
            android:id="@+id/woldPassword"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true">

            <EditText
                android:id="@+id/oldPassword"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:hint="@string/oldpasswordHint"
                android:inputType="text"
                android:maxLength="15"

                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/wnewPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/wnewconfirmpassword"
            android:layout_alignLeft="@+id/wnewconfirmpassword"
            android:layout_alignStart="@+id/wnewconfirmpassword"
            android:layout_marginTop="30dp">

            <EditText
                android:id="@+id/newPassword"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:hint="@string/newPasswordHint"
                android:inputType="text"
                android:maxLength="15"
                />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/wnewconfirmpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_below="@+id/woldPassword"
            android:layout_alignLeft="@+id/woldPassword"
            android:layout_alignStart="@+id/woldPassword">

            <EditText
                android:id="@+id/newconfirmpassword"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:hint="@string/newconfirmpasswordHint"
                android:inputType="text"
                android:maxLength="15"
                />
        </android.support.design.widget.TextInputLayout>


    </RelativeLayout>





    <Button
        android:id="@+id/btn_changepassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_changepassword"
        android:layout_margin="12dp"
        style="@style/Button"
        />

</LinearLayout>